fix initial loading on mobile mode

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -806,13 +806,16 @@ footer {
         }
     }
     div.card {
-        opacity: 1;
+        opacity: 0;
         .close {
             right: 10px;
             top: 10px;
             background: rgba(255, 255, 255, 0.6);
             padding: 9px;
             border-radius: 50%;
+        }
+        &.show{
+            opacity: 1;
         }
         &.featured {
             p {
